<resources>
    <string name="app_name">MathStone</string>
    <string name="app_id">969908274072</string>
    <string name="play_string">Play</string>
    <string name="scores_string">Scores</string>
    <string name="score_string">Score</string>
    <string name="timer_string">Time</string>
    <string name="Easy">Easy</string>
    <string name="Normal">Normal</string>
    <string name="Hard">Hard</string>
    <string name="close">Close</string>
    <string name="game_over_string">Game Over</string>
    <string name="play_again_string">Play Again</string>
    <string name="menu_string">Main Menu</string>
    <string name="easy_string">Easy</string>
    <string name="normal_string">Normal</string>
    <string name="hard_string">Hard</string>
    <string name="how_to_play_string">How To Play</string>
    <string name="sign_out">Sign Out</string>
    <string name="signin_other_error">Unable to sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="signin_failure">Unable to sign in. Warning: your scores will not be saved!</string>
    <string name="signin_success">Signed in successfully</string>
    <string name="leaderboards_not_available">You must be signed in to see leaderboards</string>
    <string name="user_pic_desc">The user\'s profile picture.</string>
    <string name="preferences_scores">Scores</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="how_to_play_desc">image_displaying_how_to_play_the_game</string>
    <string name="zero">0</string>
    <string name="email_subject">MathJumble Feedback Message</string>
    <string name="feedback_email">mathjumblefeedback@gmail.com</string>
    <string name="title_send_feedback">Feedback:</string>
    <string name="feedback">Send Feedback to: mathjumblefeedback@gmail.com</string>
    <string name="cancel">Cancel</string>
    <string name="x">x</string>
    <string name="app_title">MathStone</string>
    <string name="Equals">=</string>
    <string name="settings">Settings</string>
    <string name="sign_out_warning">Warning: scores will not be submitted when signed out!</string>
    <string name="achievements_string">Achievements</string>
</resources>