<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Title-->
    <TextView
        android:id="@+id/app_title"
        android:text="@string/app_title"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:layout_marginTop="75dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Sign in layout.-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/signInLayout">

        <!-- sign-in button-->
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"/>

        <!-- sign-out button-->
        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_out"
            android:visibility="gone"
            android:background="@drawable/light_grey_bg"/>

        <!-- User's name textview-->
        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/sign_in_button"
            android:layout_alignEnd="@id/sign_in_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:textStyle="italic"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/main_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp">

        <!-- Play button-->
        <Button
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            android:text="@string/play_string"
            android:background="@drawable/light_blue_bg"/>

        <!--Difficulty buttons-->
        <LinearLayout
            android:id="@+id/difficulty_buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/play_button"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:visibility="gone">

            <Button
                android:id="@+id/easy_button"
                android:text="@string/easy_string"
                android:background="@drawable/light_yellow_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/normal_button"
                android:text="@string/normal_string"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/light_orange_bg"/>
            <Button
                android:id="@+id/hard_button"
                android:text="@string/hard_string"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/light_red_bg"/>
        </LinearLayout>

        <!--How to Play Button-->
        <Button
            android:id="@+id/how_to_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_play_string"
            android:layout_below="@+id/play_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:background="@drawable/light_purple_bg"/>

        <!--Scores button-->
        <Button
            android:id="@+id/scores_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scores_string"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/how_to_play_button"
            android:layout_marginTop="75dp"
            android:background="@drawable/light_green_bg"/>
    </RelativeLayout>

    <!-- How to play layout-->
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/HowToPlayLayout"
        android:background="@drawable/white_bg"
        android:visibility="gone">

        <ImageView
            android:id="@+id/how_to_play_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/how_to_play"
            android:contentDescription="@string/how_to_play_desc" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/close"
            android:id="@+id/close_how_to_play"
            android:background="@drawable/light_yellow_bg"/>
    </RelativeLayout>

    <!--Feedback textview showed in how to play -->
    <TextView
        android:visibility="gone"
        android:id="@+id/feedback_title_textview"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:textSize="15sp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/feedback"/>

</RelativeLayout>