<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/easy_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/Easy" />

    <Button
        android:id="@+id/normal_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/easy_button"
        android:layout_alignStart="@+id/easy_button"
        android:layout_centerVertical="true"
        android:text="@string/Normal" />

    <Button
        android:id="@+id/hard_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:text="@string/Hard" />

    <Button
        android:id="@+id/close_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/Close" />
</RelativeLayout>
