<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Pause Button-->
    <Button
        android:id="@+id/pause_button"
        android:text="@string/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/very_light_grey_bg"
        android:layout_above="@+id/bottomButtonsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp" />

    <!-- Timer layout -->
    <RelativeLayout
        android:id="@+id/timer_layout"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="120dp"
        android:layout_height="75dp">

        <!-- Timer textview label -->
        <TextView
            android:id="@+id/timer_textview_label"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timer_string"
            android:layout_centerHorizontal="true"/>

        <!-- Timer textview value -->
        <TextView
            android:id="@+id/timer_textview"
            android:textSize="35sp"
            android:layout_below="@+id/timer_textview_label"
            android:layout_centerHorizontal="true"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <!-- Score layout -->
    <RelativeLayout
        android:id="@+id/score_layout"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp">

        <!-- Score label -->
        <TextView
            android:id="@+id/score_textview_label"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score_string"
            android:layout_centerHorizontal="true"/>

        <!-- Score value-->
        <TextView
            android:id="@+id/score_textview"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:layout_below="@id/score_textview_label"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/answerTextViewsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="180dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <!-- Left variable tv -->
        <TextView
            android:id="@+id/a_textview"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/light_blue_bg"
            android:textSize="30sp"/>

        <!-- operation tv -->
        <TextView
            android:id="@+id/operation_textview"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="30sp"
            android:text=""/>

        <!-- Center variable tv -->
        <TextView
            android:id="@+id/b_textview"
            android:gravity="center"
            android:background="@drawable/light_blue_bg"
            android:textSize="30sp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="90dp"/>

        <!-- Equals tv -->
        <TextView
            android:id="@+id/equals_textview"
            android:gravity="center"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="="/>

        <!-- Right variable tv -->
        <TextView
            android:id="@+id/c_textview"
            android:gravity="center"
            android:background="@drawable/light_blue_bg"
            android:textSize="30sp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="90dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <!-- Left answer button -->
        <Button
            android:id="@+id/a1_button"
            android:background="@drawable/light_orange_bg"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="90dp"/>

        <!-- Center answer button -->
        <Button
            android:id="@+id/a2_button"
            android:background="@drawable/light_orange_bg"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="90dp"/>

        <!-- Right answer button -->
        <Button
            android:id="@+id/a3_button"
            android:background="@drawable/light_orange_bg"
            android:textSize="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            />
    </LinearLayout>

    <!-- Layout to show upon game over -->
    <RelativeLayout
        android:id="@+id/game_over_layout"
        android:visibility="invisible"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:layout_width="300dp"
        android:layout_height="375dp"
        android:background="@drawable/light_red_transparent_bg">

        <!-- Game over label -->
        <TextView
            android:id="@+id/game_over_textview"
            android:textSize="45sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/game_over_string"/>

        <!-- Score -->
        <TextView
            android:id="@+id/game_over_score_textview"
            android:textSize="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/game_over_textview"
            android:layout_margin="15dp"
            android:text="@string/score_string"/>

        <!-- Play again button -->
        <Button
            android:id="@+id/play_again_button"
            android:background="@drawable/light_green_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/game_over_score_textview"
            android:layout_margin="15dp"
            android:text="@string/play_again_string"/>

        <!-- Main menu button -->
        <Button
            android:id="@+id/menu_button"
            android:background="@drawable/light_green_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/menu_string"
            android:layout_below="@id/play_again_button"
            android:layout_margin="15dp"/>

    </RelativeLayout>

    <!-- Layout to show when game is paused -->
    <RelativeLayout
        android:id="@+id/pause_screen_layout"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:layout_width="130dp"
        android:layout_height="200dp"
        android:background="@drawable/very_light_grey_bg"
        android:visibility="gone">

        <!-- resume button -->
        <Button
            android:id="@+id/resume_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/resume"
            android:background="@drawable/very_light_grey_bg"/>

        <!-- menu button -->
        <Button
            android:id="@+id/menu_button_at_pause"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@+id/resume_button"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/menu_string"
            android:background="@drawable/very_light_grey_bg"/>

    </RelativeLayout>
</RelativeLayout>